@@ -1,3 +1,10 @@
+Tue May 18 14:43:51 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>
+
+        * DnC/Config_Handlers/Property_Handler.h:
+        * DnC/Config_Handlers/Property_Handler.cpp:
+
+          Revoked previous commit.
+
 Tue May 18 14:25:25 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>
 
         * DnC/Config_Handlers/Property_Handler.h:
